Correction lang + contraste couleur + texte caché

--- a/style.css
+++ b/style.css
@@ -652,7 +652,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    /*color: #575757!important;*/
 }
 
 .container {
@@ -729,7 +729,7 @@ h3 {
 }
 
 h1 {
-    color: #333333!important;
+    color: #FFF;
 }
 
 h4 {
@@ -777,15 +777,15 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #AA5F3D;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFF;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #AA5F3D;
     color: #FFFFFF!important;
 }
 
